# someThing

./: imdb.py  imdb_preprocess.py  imdb_preprocess.test.py  imdb_preprocess.train.py  lstm.py  orderedDict.py  pred.py  read_data.py  read_params.py
include/: Encoding.h  HashVector_Enhanced.h  Makefile.am  UrlEncodeAndDecode.h  XmlConfigurator.h  check.h  common_index.h  darts-clone.h  darts.h  debug_info.h  general.h  main.cpp  pcre_stringpiece.h  pcrecpp.h  pcrecpparg.h  public_def.h  service_log.hpp  socket_utils.cpp  socket_utils.h  string_Util.cpp  string_Util.h  string_utils.h  text_color_switcher.hpp  unit_test.hpp  utils.cpp  utils.hpp
include/Utils/: Makefile.am  editDist.cpp  utils.h
include/Utils/.deps/: editDist.Po
include/Utils/.libs/: editDist
include/common/: EditDist.cpp  EditDist.h  Makefile.am  tf-idf.cpp  tf-idf.h  tfidf.cpp
include/common/.deps/: EditDist.Plo  tf-idf.Plo  tfidf.Po
include/common/.libs/: libeditdist.la  libeditdist.lai  libeditdist.so.0  libeditdist.so.0.0.0  libtfidf.la  libtfidf.lai  libtfidf.so.0.0.0  tf_idf
include/common/.svn/: all-wcprops  entries
include/common/.svn/text-base/: darts.h.svn-base
include/gary_common/: gary_priorsort.h
include/gary_common/.svn/: entries
include/gary_common/.svn/text-base/: gary_sort.h.svn-base  gary_string.h.svn-base  twsetypedef.h.svn-base
include/perceptron/: perceptron.h  trainPerceptron.cpp
include/perceptron/gary_common/: gary_common.h  gary_math.h  gary_string.h
include/perceptron/gary_common/.svn/: all-wcprops
pythonImage/: propertyImg.py  readImg.py
(+2 files in other folders)
